ui_tests/where_bounds_6.stderr
error: failed to resolve a
  ┌─ main.box:5:5
  │
5 │     a,
  │     ^

