ui_tests/where_bounds_6.box
fn foo() {}

fn bar(a: foo)
where {
    a,
} {}